--- a/catkin_ws/src/first_package/CMakeLists.txt
+++ b/catkin_ws/src/first_package/CMakeLists.txt
@@ -148,6 +148,13 @@ include_directories(
 # target_link_libraries(${PROJECT_NAME}_node
 #   ${catkin_LIBRARIES}
 # )
+add_executable(talker src/talker.cpp)
+target_link_libraries(talker ${catkin_LIBRARIES})
+add_dependencies(talker first_package_generate_messages_cpp)
+
+add_executable(listener src/listener.cpp)
+target_link_libraries(listener ${catkin_LIBRARIES})
+add_dependencies(listener first_package_generate_messages_cpp)
 
 #############
 ## Install ##
