--- a/catkin_ws/src/first_package/CMakeLists.txt
+++ b/catkin_ws/src/first_package/CMakeLists.txt
@@ -156,6 +156,14 @@ add_executable(listener src/listener.cpp)
 target_link_libraries(listener ${catkin_LIBRARIES})
 add_dependencies(listener first_package_generate_messages_cpp)
 
+add_executable(add_two_ints_server src/add_two_ints_server.cpp)
+target_link_libraries(add_two_ints_server ${catkin_LIBRARIES})
+add_dependencies(add_two_ints_server first_package_gencpp)
+
+add_executable(add_two_ints_client src/add_two_ints_client.cpp)
+target_link_libraries(add_two_ints_client ${catkin_LIBRARIES})
+add_dependencies(add_two_ints_client first_package_gencpp)
+
 #############
 ## Install ##
 #############
